<resources>
    <string name="app_name">Fake News Analyser</string>
    <string name="update_sources">Update Sources</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="content">Content</string>
    <string name="source">Source</string>
    <string name="developed_by">Developed by</string>
    <string name="vnit_final_year_project">Final Year Project</string>
    <string name="app_version">App Version</string>
    <string name="source_analyser">Source Analyser</string>
    <string name="source_analyser_result">Source Analyser Result</string>
    <string name="content_analyser">Content Analyser</string>
    <string name="analyse_content">Analyse Content</string>
    <string name="home">Home</string>
    <string name="headline">Headline</string>
    <string name="article">Article</string>
    <string name="Analyse">Analyse</string>
    <string name="stance_detection">Stance Detection</string>
    <string name="domain_reachability">Checking domain reachability…</string>
    <string name="domain_reachable">Domain is reachable!</string>
    <string name="domain_unreachable">Domain is unreachable!</string>
    <string name="open_url">Go to Domain</string>
    <string name="clear_history">Clear History</string>
    <string name="history">History</string>
    <string name="refresh_history">Refresh History</string>
</resources>
