<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SourceInputActivity">

    <item
        android:id="@+id/action_update_sources"
        android:orderInCategory="101"
        android:title="@string/update_sources"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="103"
        android:title="@string/clear_history"
        app:showAsAction="never" />

    <item
        android:orderInCategory="102"
        android:id="@+id/action_refresh_history"
        android:title="@string/refresh_history"
        app:showAsAction="never" />

</menu>
