<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fakestudios.devs.fakenewsanalyzer.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:id="@+id/appdetails_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/appname_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:id="@+id/appversion_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Manoj Gogula"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nithin Somisetty"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Prasanna Kumar"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Varun D"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(Developed as a part of final year project in VNIT, Nagpur)"
            android:gravity="center_horizontal"
            android:padding="4dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="( Sources taken from : www.opensources.co )"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:layout_marginBottom="16dp"/>



        <TextView
            android:id="@+id/sendFeedback_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:text="Send Feedback"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textSize="16sp"
            />

    </LinearLayout>



</RelativeLayout>
